Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50665

[OS X] Setting QSurfaceFormat causes a crash

XMLWordPrintable

    • macOS

      When linking webenginewidgets to project and setting QSurfaceFormat before creating QGuiApplication application crashes.
      If webenginewidgets is dropped from project Surface Format can be set also after QGuiApplication creation.

      Use attached test application to reproduce the issue.

        For Gerrit Dashboard: QTBUG-50665
        # Subject Branch Project Status CR V

            alexandru.croitor Alexandru Croitor
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes